force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/breadwinner_qbo__Breadwinner_Account_Connection__c.object-meta.xml
<CustomObject>
    <description>The QuickBooks Company (aka BAC) is a perfect copy of your QuickBooks Customer</description>
    <label>QuickBooks Company</label>
    <nameField>
        <displayFormat>BW - {0000}</displayFormat>
        <label>QuickBooks Company #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickBooks Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>