force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Account_no__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Account_no__c</fullName>
    <label>Account no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>