force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Active__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>