force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Bill_with_Parent__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Bill_with_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill with Parent</label>
    <type>Checkbox</type>
</CustomField>