force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__City__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__City__c</fullName>
    <description>City of the Address</description>
    <label>Town / City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>