force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Country__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Country__c</fullName>
    <description>Country of Address</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>