force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Currency__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>