force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Default_Payment_Method_Ref__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Default_Payment_Method_Ref__c</fullName>
    <label>Default Payment Method Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>