force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Do_not_Import_Bills__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Do_not_Import_Bills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Bills</label>
    <type>Checkbox</type>
</CustomField>