force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Do_not_Import_Invoices__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Do_not_Import_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Invoices</label>
    <type>Checkbox</type>
</CustomField>