force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Do_not_Import_Purchase_Orders__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Do_not_Import_Purchase_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Import Purchase Orders</label>
    <type>Checkbox</type>
</CustomField>