force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Fully_Qualified_Name__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Fully_Qualified_Name__c</fullName>
    <label>Fully Qualified Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>