force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Last_Modified_in_QBO__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Last_Modified_in_QBO__c</fullName>
    <label>Last Modified in QuickBooks</label>
    <type>DateTime</type>
</CustomField>