force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__No_Associated_SF_Account__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__No_Associated_SF_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Associated SF Account</label>
    <type>Checkbox</type>
</CustomField>