force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Notes__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Notes__c</fullName>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>