force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Postal_Code__c</fullName>
    <label>Postal / Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>