force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Preferred_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Preferred_Delivery_Method__c</fullName>
    <label>Preferred Delivery Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>