force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Reference_Id__c</fullName>
    <externalId>true</externalId>
    <label>Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>