force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Region__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Region__c</fullName>
    <description>Region of the Address</description>
    <label>State / Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>