force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__See_this_Customer_in_QBO__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__See_this_Customer_in_QBO__c</fullName>
    <formula>HYPERLINK(&quot;https://&quot;&amp;IF( CONTAINS(breadwinner_qbo__QBO_Org_Name__c , &quot;Sandbox Company&quot;), &quot;sandbox.&quot; ,&quot;&quot;) &amp;&quot;qbo.intuit.com/app/&quot;&amp; IF( breadwinner_qbo__Type__c==&quot;Vendor&quot;,&quot;vendordetail&quot;, &quot;customerdetail&quot;)&amp;&quot;?nameId=&quot;+ RIGHT(breadwinner_qbo__Reference_Id__c ,(LEN(breadwinner_qbo__Reference_Id__c )-FIND(&apos;-&apos;, breadwinner_qbo__Reference_Id__c ))) ,breadwinner_qbo__Display_Name__c , &quot;_blank&quot;)</formula>
    <label>See this Customer in QuickBooks</label>
    <type>Text</type>
</CustomField>