force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Shipping_Region__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Shipping_Region__c</fullName>
    <label>Shipping State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>