force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Street_Address__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Street_Address__c</fullName>
    <label>Street Address</label>
    <type>TextArea</type>
</CustomField>