force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Sub_Company__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Sub_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Company</label>
    <type>Checkbox</type>
</CustomField>