force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Tax_Resale_No__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Tax_Resale_No__c</fullName>
    <label>Tax Resale No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>