force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Type__c</fullName>
    <description>Type of record Customer or Vendor.</description>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>