force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/fields/breadwinner_qbo__Website__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Website__c</fullName>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>