force-app/main/default/objects/breadwinner_qbo__Breadwinner_Account_Connection__c/listViews/breadwinner_qbo__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_qbo__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_qbo__Display_Name__c</columns>
    <columns>breadwinner_qbo__Company_Name__c</columns>
    <columns>breadwinner_qbo__Salesforce_Account__c</columns>
    <columns>breadwinner_qbo__Currency__c</columns>
    <columns>breadwinner_qbo__Phone_Number__c</columns>
    <columns>breadwinner_qbo__Email__c</columns>
    <columns>breadwinner_qbo__City__c</columns>
    <columns>breadwinner_qbo__Region__c</columns>
    <columns>breadwinner_qbo__Status__c</columns>
    <columns>breadwinner_qbo__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>